TryOn button gap fix

--- a/app/src/components/buttons/TryOnButton/TryOnButton.module.scss
+++ b/app/src/components/buttons/TryOnButton/TryOnButton.module.scss
@@ -15,7 +15,7 @@
   width: calc(100% - 2 * var(--aiuta-inset-h));
   max-width: var(--aiuta-max-width);
   z-index: 1;
-  row-gap: 4px;
+  column-gap: 4px;
 }
 
 .tryOnButton_mobile {
